<resources>
    <string name="app_name">Bio2Bit</string>
    <string name="action_settings">Settings</string>
    <string name="permission_check_failed">You must grant the permission to access the coarse location, in order to use BLE on API 23.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="activity_level">Activity Level</string>
    <string name="br_rate">Br Rate</string>
    <string name="gsr_signal">GSR signal</string>
    <string name="ecg_signal">ECG Signal</string>
    <string name="signal_label">Signal Label</string>
    <string name="start_plot">Start Plot</string>
    <string name="stop_plot">Stop Plot</string>
    <string name="action_scan">Scan</string>
    <string name="ble_devices">BLE Device list</string>
    <string name="action_stop">Stop</string>
    <string name="values">Values</string>
    <string name="charts">Charts</string>
    <string name="bio_label">Bioimpedance</string>
    <string name="ecg_label">ECG</string>
    <string name="gsr_label">GSR</string>
    <string name="chart_label">Chart_Label</string>
    <string name="scan_standard_devices">Scan Standard Devices</string>
    <string name="scan_ble_devices">Scan BLE Devices</string>
    <string name="standard_paired_devices">Paired devices</string>
    <string name="connecting_title">Connecting</string>
    <string name="connecting_message">Connecting to node, please wait…</string>
    <string name="device_disconnected">Device disconnected.</string>
    <string name="device_conn_failed">Connection failed.</string>
    <string name="device_connected">Device connected successfully.</string>
    <string name="set_parameters">Set Parameters</string>
    <string name="save">Save</string>
    <string name="heart_rate_bpm">Heart rate [bpm]</string>
    <string name="breathing_rate_bpm">Breathing Rate [bpm]</string>
    <string name="activity_level_perc">Activity Level [%]</string>
    <string name="battery_level_mv">Battery Level [mV]</string>
    <string name="start_streaming">Start Streaming</string>
    <string name="stop_streaming">Stop Streaming</string>
    <string name="send_command">Send Command</string>
</resources>
