<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="200"
        android:title="@string/set_parameters"
        android:icon="@drawable/ic_settings_white_48dp"
        app:showAsAction="ifRoom|withText"
        />
    <item
        android:id="@+id/action_send_command"
        android:orderInCategory="100"
        android:title="@string/send_command"
        android:icon="@drawable/ic_send_white_48dp"
        app:showAsAction="ifRoom|withText"
        />
    <item
        android:id="@+id/action_stop_stream"
        android:orderInCategory="100"
        android:title="@string/stop_streaming"
        android:icon="@drawable/ic_stop_white_48dp"
        app:showAsAction="ifRoom|withText"
        />
</menu>