<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".uicontroller.activities.ScanBleDeviceActivity">
    <item
        android:id="@+id/action_scan"
        android:orderInCategory="100"
        android:title="@string/action_scan"
        android:icon="@drawable/ic_search_white_48dp"
        app:showAsAction="ifRoom|withText"
        android:visible="true"
        />
    <item
        android:id="@+id/action_stop"
        android:orderInCategory="101"
        android:title="@string/action_stop"
        android:icon="@drawable/ic_cancel_white_48dp"
        app:showAsAction="ifRoom|withText"
        android:visible="false"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="103"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
